# geocoding-service

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  download.py  geocoding.py  init.py  pyproject.toml  service.py  utils.py
.github/workflows/: ci.yml  docker-publish.yml  helm-publish.yml
geodata-prep/: Dockerfile  docker-compose.yml  prepare.sh
helm/: .gitignore  .helmignore  Chart.yaml  values-production.yaml  values-staging.yaml  values-test.yaml  values.yaml
helm/templates/: _helpers.tpl
helm/templates/geocoding/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
