[tool.poetry]
name = "geocoding-service"
version = "0.1.0"
description = "Geocoding as a service"
authors = ["Togglecorp Dev"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
fiona = "^1.10.1"
fastapi = "^0.115.8"
requests = "^2.32.3"
uvicorn = "^0.34.0"
geojson = ">=2.5.0"


[tool.poetry.dev-dependencies]
ipython = "*"
mypy = "^0.990"
django-stubs = "^1.13.0"
flake8 = "^5.0.4"

[tool.black]
line-length = 130
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | \.db
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
# NOTE: Update in .pre-commit-config.yaml as well
extend-exclude = "^.*\\b(migrations)\\b.*$ (__pycache__|.+/+.+/+migrations/+.*)"

[tool.isort]
profile = "black"
multi_line_output = 3
# NOTE: Update in .pre-commit-config.yaml as well
skip = [
    "**/__pycache__",
    ".venv/",
]

[tool.ruff]
line-length = 130
lint.select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


