[project]
name = "geocoding-service"
version = "0.1.0"
description = "Geocoding as a service"
authors = [{ name = "Togglecorp Dev" }]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "geopandas>=1.0.1,<2",
    "fiona>=1.10.1,<2",
    "fastapi>=0.115.8,<0.116",
    "requests>=2.32.3,<3",
    "uvicorn>=0.34.0,<0.35",
    "geojson>=2.5.0",
    "APScheduler==3.11.0",
]

[dependency-groups]
dev = [
    "ipython",
    "mypy>=0.990,<0.991",
    "django-stubs>=1.13.0,<2",
    "flake8>=5.0.4,<6",
]

[tool.ruff]
line-length = 130
extend-exclude = [
    ".git",
    ".pytest_cache",
    ".venv",
    "venv",
    "**/migrations/*",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["C901", "E701", "E203"]
extend-select = ["I", "E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
